--- a/crash-games-main/css/style.css
+++ b/crash-games-main/css/style.css
@@ -14,6 +14,51 @@ input {
     width: 100%;
 }
 
+.card {
+    border: 1px solid #ff24e2;
+    background-color: rgb(52, 13, 61);
+    border-radius: 10px;
+    box-shadow: 5px 5px 8px;
+
+    width: 200px;
+    height: 300px;
+    
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+    margin: 0.5vw
+}
+
+.card:hover {
+    scale: 1.2;
+    cursor: pointer;
+    transition: scale 1s;
+}
+
+.row {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card h2 {
+    text-align: center;
+}
+
+.card img {
+    width: 90%;
+    border-radius: 5px;
+}
+
+.like {
+    color: red;
+}
+
+
 
 footer{
     position: relative;
