--- a/crash-games-main/css/style.css
+++ b/crash-games-main/css/style.css
@@ -9,7 +9,15 @@ img{
     width:100%;
     height:100%;
 }
-
+main {
+    min-height: 70vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1%;
+    flex-wrap: wrap;
+}
 input { 
     width: 100%;
 }
@@ -19,9 +27,9 @@ input {
     background-color: rgb(52, 13, 61);
     border-radius: 10px;
     box-shadow: 5px 5px 8px;
-
-    width: 200px;
-    height: 300px;
+    padding: 0.5%;
+    width: 300px;
+    height: 400px;
     
     display: flex;
     flex-direction: column;
@@ -32,7 +40,7 @@ input {
 }
 
 .card:hover {
-    scale: 1.2;
+    scale: 1.1;
     cursor: pointer;
     transition: scale 1s;
 }
@@ -50,7 +58,7 @@ input {
 }
 
 .card img {
-    width: 90%;
+    width: 80%;
     border-radius: 5px;
 }
 
